--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Le Site à Jerem'</title>
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
   <body>
     <img src="photo.jpg" alt="Les doud'z" height="300" />
