--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contactez-moi</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <p>Ou pas</p>
